--- a/mapnav/templates/mapnav/index.html
+++ b/mapnav/templates/mapnav/index.html
@@ -4,11 +4,17 @@
 
     
     <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1 ,shrink-to-fit=no ">
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
+<script src='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
+
 
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -38,7 +44,7 @@ html, body {
                 <div class="collapse navbar-collapse" id="collapsenavbar">
                   <ul class="navbar-nav ">
                     <li class="nav-item ">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="/mapnav/index">Home <span class="sr-only">(current)</span></a>
                     </li>
                     
                    
@@ -82,103 +88,45 @@ html, body {
               {%block body %}
 
             <div id="map"></div>
-    <script>
+            <script>
+              mapboxgl.accessToken = 'pk.eyJ1IjoidmlpaWlpc2giLCJhIjoiY2s4YXE4NmYyMDRxaTNkbzNhbHV4ajk3aiJ9.TvnXm-qD00gP62DCRwg4EA';
+            
+              if ("geolocation" in navigator) { 
+    navigator.geolocation.getCurrentPosition(position => { 
+        var map = new mapboxgl.Map({
+        // container id specified in the HTML
+          container: 'map',
 
-var im = 'http://www.robotwoods.com/dev/misc/bluecircle.png';
-      // Note: This example requires that you consent to location sharing when
-      // prompted by your browser. If you see the error "The Geolocation service
-      // failed.", it means you probably did not give permission for the browser to
-      // locate you.
-      var map, infoWindow;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 15,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
+           // style URL
+          style: 'mapbox://styles/mapbox/streets-v11',
 
-        
-          
+         // initial position in [lon, lat] format
+          center: [position.coords.longitude, position.coords.latitude],
+
+         // initial zoom
+
+         zoom: 9
         });
-        infoWindow = new google.maps.InfoWindow;
 
-        var mark1 = new google.maps.Marker({
-               position: new google.maps.LatLng(25.6045, 85.0733),
-               map: map,
-               title:"m1"
-            });
+        map.addControl(
+new mapboxgl.GeolocateControl({
+positionOptions: {
+enableHighAccuracy: true
+},
+trackUserLocation: true
+})
+);
 
-        var mark2 = new google.maps.Marker({
-               position: new google.maps.LatLng(25.6166, 85.0497),
-               map: map,
-               title:"m2"
-            });
-
-        var mark3 = new google.maps.Marker({
-               position: new google.maps.LatLng(25.6163, 85.0751),
-               map: map,
-               title:"m3!"
-            });
-
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude,
-              
-            };
-
-            function geoSuccess(position) {
-            var lat = position.coords.latitude;
-             var lng = position.coords.longitude;
-             alert("lat:" + lat + " lng:" + lng);
-               codeLatLng(lat, lng);
-              }
-
-            var marker = new google.maps.Marker({position: pos, map: map , icon:im});
-
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Location found.');
-            infoWindow.open(map);
-            map.setCenter(pos);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-      }
-
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
-    </script>
-
-<script>
+        var marker = new mapboxgl.Marker()
+.setLngLat([position.coords.longitude , position.coords.latitude])
+.addTo(map);
 
 
-    function getLocation() {
-      if (navigator.geolocation) {
-        navigator.geolocation.watchPosition(showPosition);
-      }
-    }
-        
-    function showPosition(position) {
-        alert("Latitude: " + position.coords.latitude + 
-        " , Longitude: " + position.coords.longitude);
-    }
-    </script>
-    
-    <body onload='getLocation()'>
+    }); 
+} 
 
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqh6R04CLLi6I1CBlDiPUOaMS0hfzGSQk&callback=initMap">
-    </script>
+
+            </script>
 
         
 {% endblock %}
